--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.6",
     "@types/jest": "^23.3.7",
+    "@types/node": "^10.12.0",
     "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
     "jest": "^23.6.0",
