--- a/package.json
+++ b/package.json
@@ -14,6 +14,22 @@
     "test": "jest",
     "test:watch": "jest --watch --notify"
   },
+  "husky": {
+    "hooks": {
+      "precommit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.test.ts": [
+      "yarn prettier --write",
+      "git add"
+    ],
+    "*.ts": [
+      "yarn fix:tslint",
+      "yarn prettier --write",
+      "git add"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Means88/protobuf-parser.git"
@@ -34,7 +50,9 @@
     "@types/node": "^10.12.0",
     "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
+    "husky": "^1.1.2",
     "jest": "^23.6.0",
+    "lint-staged": "^8.0.3",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
     "prettier-check": "^2.0.0",
