--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/chai": "^4.1.6",
     "@types/jest": "^23.3.7",
     "@types/node": "^10.12.0",
+    "@types/pegjs": "^0.10.1",
     "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
     "husky": "^1.1.2",
@@ -64,7 +65,7 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
-    "chevrotain": "^4.1.0"
+    "pegjs": "^0.10.0"
   },
   "jest": {
     "collectCoverage": true,
