--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "@types/jest": "^23.3.7",
     "@types/node": "^10.12.0",
     "@types/pegjs": "^0.10.1",
+    "@types/prettier": "^1.13.2",
     "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "lint-staged": "^8.0.3",
     "npm-run-all": "^4.1.3",
-    "prettier": "^1.14.3",
     "prettier-check": "^2.0.0",
     "rimraf": "^2.6.2",
     "sinon": "^7.1.0",
@@ -65,7 +65,8 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
-    "pegjs": "^0.10.0"
+    "pegjs": "^0.10.0",
+    "prettier": "^1.15.2"
   },
   "jest": {
     "collectCoverage": true,
