--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
+    "execute-me": "^0.2.0",
     "pegjs": "^0.10.0",
     "prettier": "^1.15.2"
   },
