--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "protobuf-parser",
   "version": "0.1.0",
   "description": "proto buffer parser",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "bin": "tsbuf",
   "scripts": {
-    "build": "rimraf dist && tsc --build tsconfig.build.json",
+    "build": "rimraf dist && gulp build copy",
     "lint": "run-s lint:prettier lint:tslint",
     "lint:prettier": "prettier-check '{src,test}/**/*.ts'",
     "lint:tslint": "tslint -t stylish -p .",
@@ -55,6 +56,7 @@
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "lint-staged": "^8.0.3",
+    "ncp": "^2.0.0",
     "npm-run-all": "^4.1.3",
     "prettier-check": "^2.0.0",
     "rimraf": "^2.6.2",
@@ -65,7 +67,11 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
+    "chalk": "^2.4.1",
     "execute-me": "^0.2.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "mkdirp": "^0.5.1",
     "pegjs": "^0.10.0",
     "prettier": "^1.15.2"
   },
