--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "fix:prettier": "prettier --write '{src,test}/**/*.ts'",
     "fix:tslint": "tslint --fix -t stylish -p .",
     "test": "jest",
-    "test:watch": "jest --watch --notify"
+    "test:watch": "jest --watch --notify",
+    "test:ci": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "husky": {
     "hooks": {
@@ -55,6 +56,7 @@
     "@types/prettier": "^1.13.2",
     "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-typescript": "^5.0.0-alpha.3",
     "husky": "^1.1.2",
