--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tsbuf",
-  "version": "0.1.2",
+  "name": "tsbuf-nestjs",
+  "version": "0.1.6",
   "description": "Generate TypeScript enum and interface with proto buffer.",
   "main": "dist/index.js",
   "bin": "tsbuf",
