--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fix:tslint": "tslint --fix -t stylish -p .",
     "test": "jest",
     "test:watch": "jest --watch --notify",
-    "test:ci": "jest --coverage --coverageReporters=text-lcov | coveralls"
+    "test:ci": "jest --coverage"
   },
   "husky": {
     "hooks": {
@@ -56,7 +56,6 @@
     "@types/prettier": "^1.13.2",
     "@types/sinon": "^5.0.5",
     "chai": "^4.2.0",
-    "coveralls": "^3.0.2",
     "gulp": "4.0.2",
     "gulp-typescript": "^5.0.0-alpha.3",
     "husky": "^1.2.0",
