--- a/package.json
+++ b/package.json
@@ -3,33 +3,29 @@
   "version": "0.2.1",
   "description": "Generate TypeScript enum and interface with proto buffer.",
   "main": "dist/index.js",
+  "module": "esm/index.js",
+  "exports": {
+    "require": "./dist/index.js",
+    "import": "./esm/index.js"
+  },
   "bin": "tsbuf",
   "scripts": {
-    "build": "rimraf dist && gulp build copy",
-    "lint": "run-s lint:prettier lint:tslint",
-    "lint:prettier": "prettier-check '{src,test}/**/*.ts'",
-    "lint:tslint": "tslint -t stylish -p .",
-    "fix": "run-s fix:tslint fix:prettier",
-    "fix:prettier": "prettier --write '{src,test}/**/*.ts'",
-    "fix:tslint": "tslint --fix -t stylish -p .",
+    "postinstall": "husky install",
+    "build": "npm run build:cjs && npm run build:esm",
+    "build:cjs": "rimraf dist && gulp build copy",
+    "build:esm": "rimraf esm && gulp build:esm copy:esm",
+    "lint": "eslint src/**/*.ts",
+    "fix": "eslint src/**/*.ts --fix",
     "test": "jest",
     "test:watch": "jest --watch --notify",
     "test:ci": "jest --coverage"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "*.test.ts": [
-      "yarn prettier --write",
-      "git add"
+      "eslint --fix --color --cache --quiet"
     ],
     "*.ts": [
-      "yarn fix:tslint",
-      "yarn prettier --write",
-      "git add"
+      "eslint --fix --color --cache --quiet"
     ]
   },
   "repository": {
@@ -53,23 +49,20 @@
     "@types/mkdirp": "^0.5.2",
     "@types/node": "^10.12.0",
     "@types/pegjs": "^0.10.1",
-    "@types/prettier": "^1.13.2",
-    "@types/sinon": "^5.0.5",
+    "@types/prettier": "^2.7.0",
     "chai": "^4.2.0",
+    "eslint": "^8.22.0",
+    "eslint-config-green": "^0.2.0",
     "gulp": "4.0.2",
     "gulp-typescript": "^5.0.0-alpha.3",
-    "husky": "^1.2.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
-    "lint-staged": "^8.1.0",
+    "lint-staged": "^13.0.3",
     "ncp": "^2.0.0",
     "np": "^3.0.4",
     "npm-run-all": "^4.1.5",
-    "prettier-check": "^2.0.0",
     "rimraf": "^2.6.2",
-    "sinon": "^7.1.0",
     "ts-jest": "^28.0.8",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -78,7 +71,7 @@
     "file": "^0.2.2",
     "mkdirp": "^0.5.1",
     "pegjs": "^0.10.0",
-    "prettier": "^1.15.2"
+    "prettier": "^2.7.1"
   },
   "jest": {
     "collectCoverage": true,
@@ -104,6 +97,7 @@
   },
   "files": [
     "dist",
+    "esm",
     "tsbuf"
   ]
 }
